Now that KPixmapCache is not our only resort, make it safer by removing the ability to schedule a cache resize for later. This is dangerous in regards to setting a higher cache size since it is possible for the new size to be used before the file and shared memory segment have actually been resized to match.

Calling the method that resizes the cache also resizes the file/mmap as a side effect, so
don't wait to do it.

BUG:163398

svn path=/trunk/KDE/kdelibs/; revision=1122509